--- a/src/components/error-message/error-message.html
+++ b/src/components/error-message/error-message.html
@@ -9,7 +9,9 @@
         <p><strong><m-i18n k="m-error-message:browser"></m-i18n>: </strong>{{userAgent}}</p>
         <p v-if="!!referenceNumber"><strong><m-i18n k="m-error-message:reference-number"></m-i18n>: </strong>{{referenceNumber}}</p>
         <p><m-i18n k="m-error-message:date" :params="dateInfo"></m-i18n></p>
-        <pre v-if="propStacktrace">{{error.stack}}</pre>
+        <m-panel  class="m-error-message__stacktrace" :padding="false" v-if="propStacktrace">
+            <pre>{{error.stack}}</pre>
+        </m-panel>
     </m-accordion>
     <m-link mode="link">
         <m-i18n k="m-error-message:help"></m-i18n>
