Ajout d'un cas de test pour le retour automatique à la ligne (word-wrap)

--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -1,4 +1,13 @@
 <div>
     <h3>Password icon</h3>
     <m-textfield placeholder="Type your password" type="password" password-icon="true"></m-textfield>
+
+    <h3>Retour à la ligne automatique (word-wrap)</h3>
+    <p class="m-u--margin-bottom">
+        La propriété word-wrap permet les retours à la ligne automatiques dans un champ de saisi (plutôt que de cacher le texte en surplus).
+        <br>From <a href="https://github.com/ulaval/modul-components/pull/260" target="blank">PR-260</a>
+    </p>
+    <p>
+        <m-textfield label="Titre" type="text" word-wrap="true" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla risus ex, dignissim scelerisque vehicula eu, tempor at massa. Cras ut orci ut ligula iaculis faucibus non a volutpat."></m-textfield>
+    </p>
 </div>
