Ajout d'un test pour le m-textarea

--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -7,7 +7,14 @@
         La propriété word-wrap permet les retours à la ligne automatiques dans un champ de saisi (plutôt que de cacher le texte en surplus).
         <br>From <a href="https://github.com/ulaval/modul-components/pull/260" target="blank">PR-260</a>
     </p>
-    <p>
-        <m-textfield label="Titre" type="text" word-wrap="true" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla risus ex, dignissim scelerisque vehicula eu, tempor at massa. Cras ut orci ut ligula iaculis faucibus non a volutpat."></m-textfield>
+    <p class="m-u--margin-top--l">
+        <m-textfield label="Objet (textfield avec word-wrap activé)" type="text" word-wrap="true" value="Lorem ipsum dolor sit amet, consectetur adipiscing eli"></m-textfield>
+    </p>
+    <p class="m-u--margin-top--l">
+        <m-textarea label="Message (textarea)" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+
+Nulla risus ex, dignissim scelerisque vehicula eu, tempor at massa.
+
+Cras ut orci ut ligula iaculis faucibus non a volutpat."></m-textarea>
     </p>
 </div>
