--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -52,12 +52,12 @@
         outline: none;
         resize: none;
         overflow: hidden;
-        word-break: break-all;
+        word-break: break-word;
 
         &-hidden {
             opacity: 0;
             white-space: pre-wrap;
-            word-break: break-all;
+            word-break: break-word;
         }
     }
 }
