--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -27,26 +27,26 @@
         <li>Dépassement autorisé : Oui</li>
     </ul>
     <h6>Affichage du compteur : à partir de 25 caractères</h6>
-    <m-textfield :character-count="true" max-length="30" :length-overflow="true" threshold="25">
+    <m-textfield :character-count="true" max-length="30" :length-overflow="true" character-count-threshold="25">
     </m-textfield>
 
     <h6>Affichage du compteur : à partir de 0 caractère (en tout temps)</h6>
     <br>
-    <m-textfield :character-count="true" max-length="30" :length-overflow="true" threshold="0">
+    <m-textfield :character-count="true" max-length="30" :length-overflow="true" character-count-threshold="0">
     </m-textfield>
 
     <h6>Affichage du compteur : à partir de 30 caractères (une fois la limite atteinte)</h6>
     <br>
-    <m-textfield :character-count="true" max-length="30" :length-overflow="true" threshold="30">
+    <m-textfield :character-count="true" max-length="30" :length-overflow="true" character-count-threshold="30">
     </m-textfield>
 
     <h6>Affichage du compteur : à partir de 35 caractères (seuil supérieur à la limite)</h6>
     <br>
-    <m-textfield :character-count="true" max-length="30" :length-overflow="true" threshold="35">
+    <m-textfield :character-count="true" max-length="30" :length-overflow="true" character-count-threshold="35">
     </m-textfield>
 
     <h6>Affichage du compteur : à partir de -5 caractères (seuil inférieur à 0)</h6>
-    <m-textfield :character-count="true" max-length="30" :length-overflow="true" threshold="-5">
+    <m-textfield :character-count="true" max-length="30" :length-overflow="true" character-count-threshold="-5">
     </m-textfield>
 
     <h4>
@@ -73,8 +73,8 @@
     <p class="m-u--typo--precision">180 car. : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla risus ex, dignissim scelerisque vehicula eu,
         tempor at massa. Cras ut orci ut ligula iaculis faucibus non a volutpat.</p>
     <br>
-    <m-textfield placeholder="Je suis un sous-titre" :character-count="true" max-length="200" threshold="180" max-width="medium"
-        :length-overflow="true">
+    <m-textfield placeholder="Je suis un sous-titre" :character-count="true" max-length="200" character-count-threshold="180" max-width="medium"
+        :length-overflow="true" v-model="test4Model" :error="test4Model.length > 200 ? true : false">
     </m-textfield>
 
     <!-- Sandbox template -->
