textfield plugins installation

--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -77,18 +77,9 @@
         :length-overflow="true">
     </m-textfield>
 
-    <!-- Sandbox template -->
-    <h3>Test Title</h3>
-    <p class="m-u--margin-bottom">
-        Test description
-        <!-- if relevant, add link to PR
-            </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
-            -->
-    </p>
-    <p>
-        <m-checkbox>
-            <!-- Test case -->
-        </m-checkbox>
-    </p>
-
+    <h5>
+        Test 5: Password
+    </h5>
+    <br/>
+    <m-textfield type="password" label="Password" placeholder="enter your password"></m-textfield>
 </div>
