Change in default style of Table

--- a/src/styles/utils/_table.scss
+++ b/src/styles/utils/_table.scss
@@ -2,5 +2,7 @@
 //  table
 // ======================================================================
 .m-u--table {
+    padding: 0 $m-padding $m-padding;
+
     @include m-table();
 }
