--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -172,66 +172,67 @@
 }
 
 @mixin m-table() {
+    &,
     table {
         width: 100%;
         border-collapse: collapse;
         table-layout: fixed; // AEL-33
+    }
 
-        th {
-            padding: 0 $m-padding--s $m-margin--s;
-            font-weight: $m-font-weight--bold;
-            color: $m-color--black;
-            border-bottom: 2px solid $m-color--border;
-            text-align: left;
+    th {
+        padding: 0 $m-padding--s $m-margin--s;
+        font-weight: $m-font-weight--bold;
+        color: $m-color--black;
+        border-bottom: 2px solid $m-color--border;
+        text-align: left;
 
-            &:first-child {
-                padding-left: 0;
-            }
-
-            &:last-child {
-                padding-right: 0;
-            }
+        &:first-child {
+            padding-left: 0;
         }
 
-        tbody {
-            tr {
-                border-bottom: 1px solid $m-color--border;
-            }
+        &:last-child {
+            padding-right: 0;
+        }
+    }
+
+    tbody {
+        tr {
+            border-bottom: 1px solid $m-color--border;
+        }
+    }
+
+    td {
+        padding: $m-padding $m-padding--s;
+        margin: 1px 0;
+        vertical-align: top;
+        text-align: left;
+
+        &:first-child {
+            padding-left: 0;
         }
 
+        &:last-child {
+            padding-right: 0;
+        }
+    }
+
+    &.m-u--has-icon {
+        th,
         td {
-            padding: $m-padding $m-padding--s;
-            margin: 1px 0;
-            vertical-align: top;
-            text-align: left;
-
-            &:first-child {
-                padding-left: 0;
-            }
-
-            &:last-child {
-                padding-right: 0;
+            &:last-child:not(:only-child) {
+                padding: 0;
+                width: 44px;
+                text-align: center;
+                vertical-align: middle;
             }
         }
+    }
 
-        &.m-u--has-icon {
-            th,
-            td {
-                &:last-child:not(:only-child) {
-                    padding: 0;
-                    width: 44px;
-                    text-align: center;
-                    vertical-align: middle;
-                }
-            }
-        }
-
-        // when inside a m-panel component
-        .m-panel & {
-            tbody {
-                tr:last-child {
-                    border-bottom: 0;
-                }
+    // when inside a m-panel component
+    .m-panel & {
+        tbody {
+            tr:last-child {
+                border-bottom: 0;
             }
         }
     }
