--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -25,6 +25,8 @@
                   :disabled="!active"
                   :placeholder="placeholder"
                   :readonly="readonly"
+                  :maxlength="maxLengthNumber"
+                  :autocomplete="autocomplete"
                   rows="1"
                   @focus="onFocus"
                   @blur="onBlur"
@@ -32,9 +34,7 @@
                   @keyup="onKeyup"
                   @keydown="onKeydown"
                   @paste="onPaste"
-                  :autocomplete="autocomplete"
-                  v-model="model"
-                  :maxlength="maxLengthNumber">
+                  v-model="model">
         </textarea>
         <div class="m-textarea__input-hidden"
              ref="inputHidden"
