MODUL-179 - update textfield sandbox

--- a/src/components/textfield/textfield.sandbox.html
+++ b/src/components/textfield/textfield.sandbox.html
@@ -99,4 +99,17 @@
         </m-textfield>
     </p>
 
+    <h3>Password icon</h3>
+    <p>
+        <m-textfield placeholder="Type your password" type="password" password-icon="true"></m-textfield>
+    </p>
+
+    <h3>Retour à la ligne automatique (word-wrap)</h3>
+    <p>
+        La propriété word-wrap permet les retours à la ligne automatiques dans un champ de saisi (plutôt que de cacher le texte en surplus).
+        <br>From <a href="https://github.com/ulaval/modul-components/pull/260" target="blank">PR-260</a>
+    </p>
+    <p class="m-u--margin-top--l">
+        <m-textfield label="Objet (textfield avec word-wrap activé)" type="text" word-wrap="true" value="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."></m-textfield>
+    </p>
 </div>
