MODUL-220 - little tweaks to icon and text vertical alignment

--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -8,6 +8,12 @@
         -->
     </p>
     <p>
-        <m-message><!-- Test case --></m-message>
+        <m-message state="warning" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+        <m-message skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+        <m-message state="error" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+        <m-message state="information" skin="light">Ad labore ad ex do minim qui eu aliquip aute non.</m-message>
+    </p>
+    <p style="width:200px;">
+        <m-message state="warning" skin="light">Ad labore ad ex do minim qui eu aliquip aute non. Tempor Lorem ipsum ad id esse minim. Pariatur cupidatat qui qui reprehenderit voluptate aute officia consectetur cillum sint do. Consequat ipsum ex est culpa sint velit nostrud nisi minim tempor nostrud tempor adipisicing do.</m-message>
     </p>
 </div>
