MODUL-220 - little tweaks to icon and text vertical alignment

--- a/src/components/message/message.sandbox.html
+++ b/src/components/message/message.sandbox.html
@@ -1,8 +1,8 @@
 <div>
     <!-- Sandbox template -->
-    <h3>Test Title</h3>
+    <h3>Vertical alignement</h3>
     <p class="m-u--margin-bottom">
-        Test description
+        vertical alignement of icon & text with light skin
         <!-- if relevant, add link to PR
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
