--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -47,28 +47,24 @@
                                v-if="propPasswordIcon && hasValue"></m-icon-button>
             </transition>
         </template>
-        <template v-if="hasWordWrap">
-            <textarea ref="input"
-                    :id="id"
-                    class="m-textfield__input"
-                    :disabled="!active"
-                    :placeholder="placeholder"
-                    :readonly="readonly"
-                    rows="1"
-                    @focus="onFocus"
-                    @blur="onBlur"
-                    @change="onChange"
-                    @keypress.enter.prevent
-                    @keyup="onKeyup"
-                    @keydown="onKeydown"
-                    @paste="onPaste"
-                    :autocomplete="autocomplete"
-                    v-model="model">
-            </textarea>
-            <div class="m-textfield__input-hidden"
-                ref="inputHidden"
-                aria-hidden="true">{{ model }}&nbsp;</div>
-        </template>
+        <textarea ref="input"
+                :id="id"
+                class="m-textfield__input"
+                :disabled="!active"
+                :placeholder="placeholder"
+                :readonly="readonly"
+                rows="1"
+                @focus="onFocus"
+                @blur="onBlur"
+                @change="onChange"
+                @keypress.enter.prevent
+                @keyup="onKeyup"
+                @keydown="onKeydown"
+                @paste="onPaste"
+                :autocomplete="autocomplete"
+                v-model="model"
+                v-if="hasWordWrap">
+        </textarea>
     </m-input-style>
     <div class="m-textfield__validation">
         <m-validation-message
