MODUL-179 - add textarea-auto-height directive

--- a/src/components/textarea/textarea.sandbox.html
+++ b/src/components/textarea/textarea.sandbox.html
@@ -11,7 +11,7 @@
     </ul>
     <h6>Dépassement autorisé : Oui</h6>
     <br>
-    <m-textarea :character-count="true" max-length="20" :length-overflow="True" value="gdgs gdfs">
+    <m-textarea :character-count="true" max-length="20" :length-overflow="true">
     </m-textarea>
 
     <h6>Dépassement autorisé : Non</h6>
