--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -63,6 +63,7 @@
                 @paste="onPaste"
                 :autocomplete="autocomplete"
                 v-model="model"
+                v-m-textarea-auto-height
                 v-if="hasWordWrap">
         </textarea>
     </m-input-style>
