--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -34,7 +34,8 @@
                   @keyup="onKeyup"
                   @keydown="onKeydown"
                   @paste="onPaste"
-                  v-model="model">
+                  v-model="model"
+                  v-m-textarea-auto-height>
         </textarea>
     </m-input-style>
     <div class="m-textarea__validation">
