--- a/src/components/textarea/textarea.sandbox.html
+++ b/src/components/textarea/textarea.sandbox.html
@@ -80,8 +80,8 @@
         Lorsque qu'on ajoute un compteur sur un champ sans limite de caractère, le compteur doit être masqué. Nous n'avons pas de cas d'utilisation de compteur de mots sans imposer de limite.
     </p>
     <p>
-        <m-textfield :character-count="true" character-counter-threshold="20">
-        </m-textfield>
+        <m-textarea :character-count="true" character-counter-threshold="20">
+        </m-textarea>
     </p>
 
     <!-- Sandbox template -->
