Ajustements mineurs aux sandbox

--- a/src/components/textarea/textarea.sandbox.html
+++ b/src/components/textarea/textarea.sandbox.html
@@ -1,9 +1,9 @@
 <div>
     <h3>
-        Compteur de caractères
+        Test 1 : Compteur de caractères
     </h3>
     <h4>
-        Test 1 : Dépassement autorisé
+        Dépassement autorisé
     </h4>
     <ul>
         <li>Nombre de caractères permis : 20</li>
@@ -20,7 +20,7 @@
     </m-textarea>
 
     <h4>
-        Test 2 : Seuil d'affichage
+        Seuil d'affichage
     </h4>
     <ul>
         <li>Nombre de caractères permis : 30</li>
@@ -50,7 +50,7 @@
     </m-textarea>
 
     <h4>
-        Test 3 : Affichage d'un message d'erreur
+        Affichage d'un message d'erreur
     </h4>
     <ul>
         <li>Nombre de caractères permis : 20</li>
@@ -62,7 +62,7 @@
     </m-textarea>
 
     <h4>
-        Test 4 : sous-titre dans un module d'aprentissage (Prisme)
+        Sous-titre dans un module d'aprentissage (Prisme)
     </h4>
     <ul>
         <li>Nombre de caractères permis : 200</li>
@@ -75,7 +75,7 @@
         :length-overflow="true" v-model="test4Model" :error="test4Model.length > 200 ? true : false">
     </m-textarea>
 
-    <h3>Test 5 : Ne pas afficher un compteur sur un champ de saisie sans limite de caractères</h3>
+    <h4>Ne pas afficher un compteur sur un champ de saisie sans limite de caractères</h4>
     <p class="m-u--margin-bottom">
         Lorsque qu'on ajoute un compteur sur un champ sans limite de caractère, le compteur doit être masqué. Nous n'avons pas de cas d'utilisation de compteur de mots sans imposer de limite.
     </p>
@@ -85,7 +85,7 @@
     </p>
 
     <!-- Sandbox template -->
-    <h3>Test Title</h3>
+    <h3>Test # : Title</h3>
     <p class="m-u--margin-bottom">
         Test description
         <!-- if relevant, add link to PR
@@ -93,9 +93,9 @@
             -->
     </p>
     <p>
-        <m-checkbox>
+        <m-textarea>
             <!-- Test case -->
-        </m-checkbox>
+        </m-textarea>
     </p>
 
 </div>
